// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HighLightCard should render expense card (type down) correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomLeftRadius": 16,
      "borderBottomRightRadius": 16,
      "borderLeftColor": "#e83f5b",
      "borderLeftWidth": 4,
      "borderTopLeftRadius": 16,
      "borderTopRightRadius": 16,
      "elevation": 4,
      "marginRight": 16,
      "paddingBottom": 63,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 24,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.08,
      "shadowRadius": 12,
      "width": 589,
    }
  }
  type="down"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "color": "#969cb2",
          "fontFamily": "Poppins_500Medium",
          "fontSize": 27,
        }
      }
      type="down"
    >
       
      Saidas
       
    </Text>
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 12,
          },
          {
            "color": "#e83f5b",
            "fontSize": 55,
          },
          {
            "fontFamily": "feather",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      type="down"
    >
      
    </Text>
  </View>
  <View
    style={
      {
        "marginTop": 24,
      }
    }
  >
    <Text
      style={
        {
          "color": "#363f5f",
          "fontFamily": "Poppins_700Bold",
          "fontSize": 55,
        }
      }
      type="down"
    >
      R$ 2.500,00
    </Text>
    <Text
      style={
        {
          "color": "#969cb2",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 24,
          "marginTop": 4,
        }
      }
      type="down"
    >
      Ultima saida 20 de marco
    </Text>
  </View>
</View>
`;

exports[`HighLightCard should render income card (type up) correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomLeftRadius": 16,
      "borderBottomRightRadius": 16,
      "borderLeftColor": "#12A454",
      "borderLeftWidth": 4,
      "borderTopLeftRadius": 16,
      "borderTopRightRadius": 16,
      "elevation": 4,
      "marginRight": 16,
      "paddingBottom": 63,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 24,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.08,
      "shadowRadius": 12,
      "width": 589,
    }
  }
  type="up"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "color": "#969cb2",
          "fontFamily": "Poppins_500Medium",
          "fontSize": 27,
        }
      }
      type="up"
    >
       
      Entradas
       
    </Text>
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 12,
          },
          {
            "color": "#12A454",
            "fontSize": 55,
          },
          {
            "fontFamily": "feather",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      type="up"
    >
      
    </Text>
  </View>
  <View
    style={
      {
        "marginTop": 24,
      }
    }
  >
    <Text
      style={
        {
          "color": "#363f5f",
          "fontFamily": "Poppins_700Bold",
          "fontSize": 55,
        }
      }
      type="up"
    >
      R$ 5.000,00
    </Text>
    <Text
      style={
        {
          "color": "#969cb2",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 24,
          "marginTop": 4,
        }
      }
      type="up"
    >
      Ultima entrada 15 de marco
    </Text>
  </View>
</View>
`;

exports[`HighLightCard should render total card correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#5636D3",
      "borderBottomLeftRadius": 16,
      "borderBottomRightRadius": 16,
      "borderTopLeftRadius": 16,
      "borderTopRightRadius": 16,
      "elevation": 4,
      "marginRight": 16,
      "paddingBottom": 63,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 24,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.08,
      "shadowRadius": 12,
      "width": 589,
    }
  }
  type="total"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffff",
          "fontFamily": "Poppins_500Medium",
          "fontSize": 27,
        }
      }
      type="total"
    >
       
      Total
       
    </Text>
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 12,
          },
          {
            "color": "#ffff",
            "fontSize": 55,
          },
          {
            "fontFamily": "feather",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      type="total"
    >
      
    </Text>
  </View>
  <View
    style={
      {
        "marginTop": 24,
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffff",
          "fontFamily": "Poppins_700Bold",
          "fontSize": 55,
        }
      }
      type="total"
    >
      R$ 2.500,00
    </Text>
    <Text
      style={
        {
          "color": "#ffff",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 24,
          "marginTop": 4,
        }
      }
      type="total"
    >
      01 a 20 de marco
    </Text>
  </View>
</View>
`;
